[package]
name = "wgpu-renderer"
version = "0.0.0"
authors = ["Devin Brite <devin@dwbrite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# dev requirements: cmake, libxinerama, libxcursor, libxi, python

[dependencies]
# basic deps
futures = "0.3.4"
failure = "0.1.8"

# shader deps
shaderc = "0.6.2"
bytemuck = "1.2.0"
# rendering data / math
image = "0.22"
cgmath = "0.17.0"
tobj = "2.0.2"

# windowing
winit = "0.22.2"
imgui = "0.4.0"
imgui-winit-support = "0.4.0"
imgui-wgpu = { git = "https://github.com/dwbrite/imgui-wgpu-rs", rev = "c3463ad1d3ee287d671246b0bb5881d0876001e0" } # v0.7 (not yet on crates.io)

[dependencies.wgpu]
version = "0.5.0"
features = ["vulkan"] # use vulkan instead of dx12 on windows

[profile.release] # :/
debug = true
